# op-aws-lc

./: .gitignore  CONTRIBUTING.md  OpAwsLc.podspec  README.md  lefthook.yml  mise.toml  op-aws-lc.podspec  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JNIOnLoad.cpp  OpAwsLc.cpp  OpAwsLc.hpp
android/src/main/java/com/opawslc/: JNIOnLoad.java  OpAwsLcModule.kt  OpAwsLcPackage.kt
android/src/main/jni/include/: librn_aws_lc.h
cpp/: HmacKey.cpp  HmacKey.h  OPThreadPool.cpp  OPThreadPool.h  OPThreadPool.hpp  RsaPrivateKey.cpp  RsaPrivateKey.h  RsaPublicKey.cpp  RsaPublicKey.h  RsaPublicKey.hpp  bindings.cpp  bindings.hpp  hmac.cpp  hmac.hpp  macros.h  macros.hpp  op-aws-lc.cpp  op-aws-lc.h  opawslcbindings.cpp  rsa.cpp  rsa.h  rsa.hpp  types.hpp  utils.cpp  utils.hpp
example/: Gemfile  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/opawslc/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/OpAwsLcExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/OpAwsLcExample.xcodeproj/: project.pbxproj
example/ios/OpAwsLcExample.xcodeproj/xcshareddata/xcschemes/: OpAwsLcExample.xcscheme
example/ios/OpAwsLcExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  op-test.tsx
example/src/tests/: hmac.ts  index.ts  rsa.ts
ios/: OpAwsLc.h  OpAwsLc.mm
ios/libaws_lc.xcframework/: Info.plist
ios/libaws_lc.xcframework/ios-arm64-simulator/libaws_lc.framework/: libaws_lc
ios/libaws_lc.xcframework/ios-arm64/libaws_lc.framework/: Info.plist  libaws_lc
ios/libaws_lc.xcframework/ios-arm64/libaws_lc.framework/Headers/: libaws_lc.h
ios/libaws_lc.xcframework/ios-arm64/libaws_lc.framework/_CodeSignature/: CodeResources
ios/libaws_lc_crypto.xcframework/: Info.plist
ios/libaws_lc_crypto.xcframework/ios-arm64-simulator/libaws_lc_crypto.framework/: libaws_lc_crypto
ios/libaws_lc_crypto.xcframework/ios-arm64-simulator/libaws_lc_crypto.framework/_CodeSignature/: CodeResources
ios/libaws_lc_crypto.xcframework/ios-arm64-simulator/libaws_lc_fips.framework/: Info.plist
ios/libaws_lc_crypto.xcframework/ios-arm64/libaws_lc_crypto.framework/: libaws_lc_crypto
ios/libaws_lc_rust_wrapper.xcframework/: Info.plist
ios/libaws_lc_rust_wrapper.xcframework/ios-arm64-simulator/libaws_lc_rust_wrapper.framework/: libaws_lc_rust_wrapper
ios/libaws_lc_rust_wrapper.xcframework/ios-arm64-simulator/libaws_lc_rust_wrapper.framework/_CodeSignature/: CodeResources
ios/libaws_lc_rust_wrapper.xcframework/ios-arm64/libaws_lc_rust_wrapper.framework/: Info.plist  libaws_lc_rust_wrapper
ios/libawslc.xcframework/: Info.plist
ios/libawslc.xcframework/ios-arm64-simulator/Headers/: libawsrc.h
op-aws-lc/android/src/main/jni/include/: libaws_lc.h
rn-aws-lc/: Cargo.toml  Makefile  build.rs
rn-aws-lc/libaws_lc_fips_rust_wrapper.xcframework/ios-arm64/libaws_lc_fips_rust_wrapper.framework/: Info.plist
rn-aws-lc/src/: error.rs  hmac.rs  lib.rs  utils.rs
rust/: .gitignore  Cargo.toml  Makefile  build.rs
rust/src/: error.rs  hmac.rs  lib.rs  rsa.rs  utils.rs
rust/templates/libaws_lc_crypto.xcframework/ios-arm64/libaws_lc_crypto.framework/: Info.plist
rust/templates/libaws_lc_fips.xcframework/: Info.plist
rust/templates/libaws_lc_fips.xcframework/ios-arm64-simulator/libaws_lc_fips.framework/: Info.plist
rust/templates/libaws_lc_fips_rust_wrapper.xcframework/: Info.plist
rust/templates/libaws_lc_fips_rust_wrapper.xcframework/ios-arm64-simulator/libaws_lc_fips_rust_wrapper.framework/: Info.plist
rust/templates/libaws_lc_rust_wrapper.xcframework/ios-arm64/libaws_lc_rust_wrapper.framework/: Info.plist
scripts/: install-cargo-bin.sh
src/: NativeOpAwsLc.ts  index.tsx
