[package]
name = "aws-lc"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aws-lc-rs = { version = "1.15.1", features = ["fips", "bindgen"] }
lazy_static = "1.5.0"
log = "0.4.29"
thiserror = "2.0.17"

[build-dependencies]
cbindgen = "0.29.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
